Add KG + BM25 embedding-free memory backend and native-image build
- Implement kschltz.agent.memory.kg-bm25-backend with file-backed
  per-session storage, BM25 sparse retrieval, token KG overlap,
  RRF fusion, and in-memory mode.
- Add :kg-bm25 backend wiring in system.clj and the :dev alias.
- Add HTTP embedder (http-embedding) for native-friendly remote
  embeddings, preserving langchain4j as JVM-only default.
- Add native-image build task with :native alias that excludes
  Proximum + ONNX; include dynamic LLM/HTTP namespaces via static
  requires in cli.clj so native-image retains them.
- Add dev demos: stub transcription demo and live Ollama demo.
- Document backends, native-image usage, and catalog of embedding-free
  agentic memory alternatives.
- Tests pass: 144 tests / 369 assertions.